syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "CustomerOnSA.proto";

message GetCustomerListRequest {
    int32 SalesArrangementId = 1;
}

message GetCustomerListResponse {
    repeated DomainServices.SalesArrangementService.CustomerOnSA Customers = 1;
}